# tp3_MPI

./: .gitignore
tp3/: CMakeLists.txt  README  main.cpp
